# -

lab1/: CMakeLists.txt  extract_numbers.cpp  extract_numbers.h  main.cpp  test_extract_numbers.cpp
lab1/src/: extract_numbers.cpp
lab1/test/: test_extract_numbers.cpp
lab2/: CMakeLists.txt  Eleven.cpp  main.cpp  test_eleven.cpp
lab2/include/: Eleven.h
lab2/src/: Eleven.cpp
lab2/test/: test_eleven.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/include/: Figure.h  FigureArray.h  Rectangle.h  Square.h  Triangle.h
lab3/src/: FigureArray.cpp  Rectangle.cpp  Square.cpp  Triangle.cpp
lab3/test/: test_figures.cpp
lab4/: CMakeLists.txt  main.cpp
lab4/include/: Figure.h  FigureArray.h  Point.h  Rectangle.h  Square.h  Triangle.h
lab4/test/: test_figures.cpp
lab5/: CmakeLists.txt  main.cpp
lab5/include/: BidirectionalList.h  MemoryResource.h
lab5/test/: BidirectionalListTests.cpp
lab6/: CmakeLists.txt  main.cpp
lab6/include/: druid.hpp  npc.h  npc.hpp  orc.hpp  squirrel.hpp
lab6/src/: dragon.cpp  druid.cpp  knight.cpp  npc.cpp  observer.cpp  orc.cpp  princess.cpp  squirrel.cpp
lab6/test/: test_all.cpp
lab7/: CMakeLists.txt  main.cpp
lab7/include/: npc.hpp
lab7/src/: druid.cpp  npc.cpp  orc.cpp  squirrel.cpp
lab7/test/: tests.cpp
